--- a/projeto qr code/style.css
+++ b/projeto qr code/style.css
@@ -6,19 +6,53 @@
 }
 
 body{
+    background-color: rgb(189, 187, 187);
+    display: flex;
+    height: 100vh;
+    min-width: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-degrade{
+
+    height: 270px;
+    width: 410px;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    background-color: #34db7a;
+    background-image: linear-gradient(to left, blue, orangered,yellow );
+    background-size: 500% 100%;/*eixo x 500% eixo y 100%*/
+    animation: colors 3s infinite alternate;
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.18);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    transition: 0.2s;
 }
+
+@keyframes colors {
+    0%{
+        background-position-x:0% ;
+    }
+    100%{
+        background-position-x:100% ;
+    }
+}
+
+
 .conteiner{
+    /* background:linear-gradient(135deg, rgba(255,255,255,0.1),rgba(255,255,255,0)) ; */
+    /* backdrop-filter: blur(10px); */
+    /* -webkit-backdrop-filter: blur(10px); */
     background-color: white;
     height: 260px;
     width: 400px;
-    border-radius: 10px;
+    border-radius: 20px;
     padding:20px;
     transition: 0.2s;
+    /* border: 1px solid rgba(255,255,255,0.18); */
+    /* box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37); */
+    
 
 }
 
@@ -48,6 +82,7 @@ body{
 #qr-form input{
     border: 1px solid #777;
     padding: 10px 15px;
+    margin: 10px;
 }
 #qr-form button{
     background-color: #086824;
